//  Copyright (c) 2022, WSO2 LLC. (http://www.wso2.org) All Rights Reserved.
//
//  WSO2 LLC. licenses this file to you under the Apache License,
//  Version 2.0 (the "License"); you may not use this file except
//  in compliance with the License.
//  You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
//  Unless required by applicable law or agreed to in writing,
//  software distributed under the License is distributed on an
//  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
//  KIND, either express or implied.  See the License for the
//  specific language governing permissions and limitations
//  under the License.

syntax = "proto3";

package wso2.discovery.apkmgt;

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/apkmgtapplication;apkmgtapplication";
option java_package = "org.wso2.choreo.connect.discovery.apkmgt";
option java_outer_classname = "ApkMgtApplicationProto";
option java_multiple_files = false;

// [#protodoc-title: ApplicationDetails]

message Application {
  string uuid = 1;
  string name = 2;
  string owner = 3;
  map<string, string> attributes = 4;
  string subscriber = 5;
  string organization = 6;
  repeated Subscription subscriptions = 7;
  repeated ConsumerKey consumerKeys = 8;
}

message ConsumerKey {
  string key = 1;
  string keyManager = 2;
}

message Subscription {
  string uuid = 1;
  string apiUuid = 2;
  string policyId = 3;
  string subscriptionStatus = 4;
  string organization = 5;
  string createdBy = 6;
}
