syntax = "proto3";

package discovery.service.subscription;

import "envoy/service/discovery/v3/discovery.proto";

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/service/subscription";
option java_package = "org.wso2.choreo.connect.discovery.service.subscription";
option java_outer_classname = "AppDSProto";
option java_multiple_files = true;
option java_generic_services = true;

// [#protodoc-title: AppDS]
service ApplicationDiscoveryService {
  rpc StreamApplications(stream envoy.service.discovery.v3.DiscoveryRequest)
      returns (stream envoy.service.discovery.v3.DiscoveryResponse) {
  }
}
