syntax = "proto3";

package wso2.discovery.subscription;

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/subscription;subscription";
option java_package = "org.wso2.choreo.connect.discovery.subscription";
option java_outer_classname = "SubscriptionProto";
option java_multiple_files = true;

// [#protodoc-title: Subscription]

// Subscription data model
message Subscription {
	string subscriptionId = 1;
	string policyId = 2;
	int32 apiId = 3;
	int32 appId = 4;
	string subscriptionState = 5;
	int64 timeStamp = 6;
	int32 tenantId = 7;
	string tenantDomain = 8;
	string subscriptionUUID = 9;
	string appUUID = 10;
	string apiUUID = 11;
}
